Working application. Corrected form validation, better responsive look on mobile devices, working logic, popup with game-end info

--- a/assets/style.scss
+++ b/assets/style.scss
@@ -256,6 +256,73 @@ body {
         }
     }
 }
+.popup__window {
+    position: fixed;
+    top: 0%;
+    left: 0%;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: rgba(130, 167, 166, 0.8);
+    display: none;
+    
+    .popup {
+        text-align: center;
+        background-color: $color1;
+        border-radius: 10%;
+        padding: 50px 100px;
+        opacity: 1;
+        @media (max-width: 500px){
+            padding: 50px 50px;
+        }
+
+        .popup__winner {
+            font-weight: 400;
+            font-size: 2rem;
+            text-shadow: 0 0 10px rgba(250,250,250,0.8);
+            margin-bottom: 30px;
+            @media (max-width: 500px){
+                font-size: 1.5rem;
+            }
+        }
+        .popup__info {
+            font-weight: 300;
+            font-size: 1.2rem;
+            margin: 10px 0;
+            @media (max-width: 500px){
+                font-size: 1rem;
+            }
+        }
+        .popup__button {
+            width: 200px;
+            font-size: 1rem;
+            text-align: center;
+            background-color: $color2;
+            border: 0;
+            padding: 15px 2%;
+            margin: 20px 0;
+            font-weight: 700;
+            text-transform: uppercase;
+            position: relative;
+            box-shadow: 10px 10px 2px #222;
+            transition: 0.3s all;
+            @media (max-width: 500px){
+                font-size: 0.8rem;
+                width: 150px;
+            }
+        }
+        .popup__button:focus {
+            box-shadow: -10px 10px 2px #222;
+            background-color: $color4;
+        }
+        .popup__button:hover {
+            background-color: $color4;
+            box-shadow: -10px 10px 2px #222;
+        }
+    }
+}
 
 @keyframes startMoveBefore{
     0% {
